src/test/deca/context/invalid/expr_cast_boolean_to_null.deca
// Test of the rule (3.39) : can't cast boolean to null.
{
	null var1;
	boolean var2;
	var1 = (null)(var2);
}

// Résultat :
//# a
